# order-processing-system

./: .gitignore  Rakefile  docker-compose.yml
inventory-service/: pyproject.toml
notification-service/: pyproject.toml
order-service/: Dockerfile  pyproject.toml
order-service/src/order_service/: main.py
order-service/src/order_service/api/v1/endpoints/: orders.py
order-service/src/order_service/core/: config.py
order-service/src/order_service/models/: schemas.py
order-service/tests/: conftest.py  test_create_order.py  test_main.py
payment-service/: pyproject.toml
