[project]
name = "notification-service"
version = "0.1.0"
description = ""
authors = [
    {name = "aserrador",email = "alejandro.ayala@onecluster.org"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "notification_service", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
